// приняты все (которые успел) изменения с kotoed, переделана задача propogateHandshakes

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,8 @@
 
                         <package>lesson3.task1</package>
                         <package>lesson4.task1</package>
-                        <package>lesson5.task1</package>
+                        <package>lesson5.task1
+                        </package>
                         <package>lesson6.task1</package>
                         <package>lesson7.task1</package>
 
